# multi-cli-orchestrator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter-request.yml  bug_report.yml  safety_concern.yml  trial-feedback.yml  workflow-template-request.yml
.github/workflows/: ci.yml
docs/: ADAPTER_MATURITY_MODEL.md  GOOD_FIRST_ISSUES.md  TRIAL_FEEDBACK_LOOP.md  WORKFLOW_TEMPLATE_CONTRIBUTING.md  adapter-contributor-guide.md  adapter-extension-roadmap-v5.6.md  adapter-spec.md  adapter-templates.md  architecture.md  boss-dashboard.md  command-reference.md  concepts.md  demo-story-v5.1.html  demo-story-v5.1.md  diagrams.md  dogfood-workflows-v5.2.md  end-to-end-cases-v5.5.md  extraction-map.md  lark-company-share-v5.0.xml  launch-playbook.md  loop-spec.md  open-source-facade-v5.4.md  project-design-brief-v5.0.html  project-design-brief-v5.0.md  project-overview-v5.0.html  project-overview-v5.0.md  public-copy-snippets-v5.0.md  public-launch-article-v5.0.html  public-launch-article-v5.0.md  public-polish-loop-v5.md  public-social-posts-v5.0.md  quickstart.md  redaction-checklist.md  release-candidate-v5.9.md  release-checklist.md  release-notes-v3.0.md  release-notes-v4.0.md  release-notes-v5.0.md  release-notes-v5.9.md  run-ledger.md  (+3 more)
docs/archive/v4.0-external-materials/: README.md  lark-company-share-v4.0.xml  project-design-brief-v4.0.html  project-design-brief-v4.0.md  public-copy-snippets-v4.0.md  public-launch-article-v4.0.html  public-launch-article-v4.0.md  public-social-posts-v4.0.md
docs/assets/: adapter-matrix-v5.1.html  adapter-maturity.mmd  control-plane.mmd  execution-gate.mmd
docs/tutorials/: adapter-onboarding-loop.md  documentation-release-loop.md  frontend-review-loop.md
examples/hello-multi-cli/: README.md
examples/realistic-workflows/: README.md
src/mco/: __init__.py  cli.py  config.py  monitor.py  schemas.py  status.py
src/mco/adapters/: __init__.py  claude.py  doctor.py  gate.py  generic.py  kimi.py  matrix.py  scaffold.py  smoke.py
src/mco/audit/: __init__.py  safety.py
src/mco/dashboard/: __init__.py  static.py
src/mco/demo/: __init__.py  hello.py  walkthrough.py
templates/sandbox-contracts/: claude-code-supervised.json
templates/workflows/: documentation-release-loop.json  frontend-review-loop.json
tests/unit/: test_workspace.py
(+27 files in other folders)
